/*
 * Copyright 2016-present the original author or authors.
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *      https://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

syntax = "proto3";

package api.center.auth;

import "api/common/base.proto";
import "api/common/enums.proto";
import "api/common/r.proto";

// 配置相关
option java_package = "com.aiforest.tmmes.api.center.auth";
option java_outer_classname = "UserProto";
option objc_class_prefix = "Auth";
option java_multiple_files = true;

// 接口类
service UserApi {
  rpc selectById (IdQuery) returns (RUserDTO);
}

// selectById Query
message IdQuery {
  string id = 1;
}

// R of User DTO
message RUserDTO {
  api.common.RDTO result = 1; // 结果
  UserDTO data = 2; // 数据
}

// User DTO
message UserDTO {
  api.common.BaseDTO base = 1; // 基础
  string nick_name = 2; // 用户昵称
  string user_name = 3; // 用户名称
  string phone = 4; // 手机号
  string email = 5; // 邮箱
  string social_ext = 6; // 社交相关拓展信息，加密存储
  string identity_ext = 7; // 身份相关拓展信息，加密存储
}